--- a/R_Assignment/R_markdown.Rmd
+++ b/R_Assignment/R_markdown.Rmd
@@ -95,13 +95,15 @@ library(dplyr)
 **maize:**
 ```{r}
 genotypes_by_groups_maize <- filter(genotype_data_raw, Group == "ZMMIL" | Group == "ZMMLR" | Group == "ZMMMR")
-genotypes_by_groups_maize
+
+head(genotypes_by_groups_maize)
 ```
 
 **teosinte:**
 ```{r}
 genotypes_by_groups_teosinte <- filter(genotype_data_raw, Group == "ZMPBA" | Group == "ZMPIL" | Group == "ZMPJA")
-genotypes_by_groups_teosinte
+
+head(genotypes_by_groups_teosinte)
 ```
 
 
@@ -110,19 +112,22 @@ genotypes_by_groups_teosinte
 **maize:**
 ```{r}
 genotypes_maize_transposed <- t(genotypes_by_groups_maize)
-genotypes_maize_transposed
+
+head(genotypes_maize_transposed)
 ```
 
 **teosinte:**
 ```{r}
 genotypes_teosinte_transposed <- t(genotypes_by_groups_teosinte)
-genotypes_teosinte_transposed
+
+head(genotypes_teosinte_transposed)
 ```
 
 * Only need certain columns from the `snp_position.txt` file for the analysis so we can cut those out by using the `select` function in dplyr:
 ```{r}
 snp_columns_needed <- select(snp_position_data_raw, SNP_ID, Chromosome, Position)
-snp_columns_needed
+
+head(snp_columns_needed)
 ```
 
 
@@ -156,7 +161,7 @@ chromosome1_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome1_maize_genotypes_snp_arrange_ascending <- arrange(chromosome1_maize_genotypes_snp, Position)
 
-write.csv(chromosome1_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr1_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome1_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr1_maize_ascending_question.csv", row.names=F)
 ```
 
 **maize** chromosome 2:
@@ -165,7 +170,7 @@ chromosome2_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome2_maize_genotypes_snp_arrange_ascending <- arrange(chromosome2_maize_genotypes_snp, Position)
 
-write.csv(chromosome2_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr2_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome2_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr2_maize_ascending_question.csv", row.names=F)
 ```
 
 **maize** chromosome 3: 
@@ -174,7 +179,7 @@ chromosome3_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome3_maize_genotypes_snp_arrange_ascending <- arrange(chromosome3_maize_genotypes_snp, Position)
 
-write.csv(chromosome3_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr3_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome3_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr3_maize_ascending_question.csv", row.names=F)
 ```
 
 **maize** chromosome 4:
@@ -183,7 +188,7 @@ chromosome4_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome4_maize_genotypes_snp_arrange_ascending <- arrange(chromosome2_maize_genotypes_snp, Position)
 
-write.csv(chromosome4_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr4_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome4_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr4_maize_ascending_question.csv", row.names=F)
 ```
 
 **maize** chromosome 5:
@@ -192,7 +197,7 @@ chromosome5_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome5_maize_genotypes_snp_arrange_ascending <- arrange(chromosome5_maize_genotypes_snp, Position)
 
-write.csv(chromosome5_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr5_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome5_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr5_maize_ascending_question.csv", row.names=F)
 ```
 
 
@@ -202,7 +207,7 @@ chromosome6_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome6_maize_genotypes_snp_arrange_ascending <- arrange(chromosome6_maize_genotypes_snp, Position)
 
-write.csv(chromosome6_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr6_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome6_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr6_maize_ascending_question.csv", row.names=F)
 ```
 
 **maize** chromosome 7:
@@ -211,7 +216,7 @@ chromosome7_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome7_maize_genotypes_snp_arrange_ascending <- arrange(chromosome7_maize_genotypes_snp, Position)
 
-write.csv(chromosome7_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr7_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome7_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr7_maize_ascending_question.csv", row.names=F)
 ```
 
 **maize** chromosome 8:
@@ -220,7 +225,7 @@ chromosome8_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome8_maize_genotypes_snp_arrange_ascending <- arrange(chromosome8_maize_genotypes_snp, Position)
 
-write.csv(chromosome8_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr8_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome8_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr8_maize_ascending_question.csv", row.names=F)
 ```
 
 
@@ -230,7 +235,7 @@ chromosome9_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosome
 
 chromosome9_maize_genotypes_snp_arrange_ascending <- arrange(chromosome9_maize_genotypes_snp, Position)
 
-write.csv(chromosome9_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr9_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome9_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr9_maize_ascending_question.csv", row.names=F)
 ```
 
 
@@ -240,7 +245,7 @@ chromosome10_maize_genotypes_snp <- filter(joined_maize_genotypes_snp, Chromosom
 
 chromosome10_maize_genotypes_snp_arrange_ascending <- arrange(chromosome10_maize_genotypes_snp, Position)
 
-write.csv(chromosome10_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr10_maize_ascending_question.csv", row.names=F)
+write.csv(chromosome10_maize_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_ascend_question/chr10_maize_ascending_question.csv", row.names=F)
 ```
 
 
@@ -252,7 +257,7 @@ chromosome1_teosinte_genotypes_snp <- filter(joined_teosinte_genotypes_snp, Chro
 
 chromosome1_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome1_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome1_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr1_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome1_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr1_teosinte_ascending_question.csv", row.names=F)
 ```
 
 **teosinte** chromosome 2: 
@@ -261,7 +266,7 @@ chromosome2_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chrom
 
 chromosome2_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome2_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome2_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr2_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome2_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr2_teosinte_ascending_question.csv", row.names=F)
 ```
 
 
@@ -271,7 +276,7 @@ chromosome3_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chrom
 
 chromosome3_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome3_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome3_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr3_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome3_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr3_teosinte_ascending_question.csv", row.names=F)
 ```
 
 
@@ -281,7 +286,7 @@ chromosome4_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chrom
 
 chromosome4_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome4_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome4_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr4_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome4_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr4_teosinte_ascending_question.csv", row.names=F)
 ```
 
 **teosinte** chromosome 5:
@@ -290,7 +295,7 @@ chromosome5_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chrom
 
 chromosome5_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome5_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome5_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr5_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome5_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr5_teosinte_ascending_question.csv", row.names=F)
 ```
 
 **teosinte** chromosome 6:
@@ -299,7 +304,7 @@ chromosome6_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chrom
 
 chromosome6_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome6_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome6_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr6_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome6_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr6_teosinte_ascending_question.csv", row.names=F)
 ```
 
 **teosinte** chromosome 7:
@@ -308,7 +313,7 @@ chromosome7_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chrom
 
 chromosome7_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome7_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome7_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/maize_final_files/chr7_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome7_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr7_teosinte_ascending_question.csv", row.names=F)
 ```
 
 **teosinte** chromosome 8:
@@ -317,7 +322,7 @@ chromosome8_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chrom
 
 chromosome8_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome8_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome8_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr8_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome8_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr8_teosinte_ascending_question.csv", row.names=F)
 ```
 
 **teosinte** chromosome 9:
@@ -326,7 +331,7 @@ chromosome9_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chrom
 
 chromosome9_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome9_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome9_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr9_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome9_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr9_teosinte_ascending_question.csv", row.names=F)
 ```
 
 **teosinte** chromosome 10:
@@ -335,7 +340,7 @@ chromosome10_teosinte_genotypes_snp<- filter(joined_teosinte_genotypes_snp, Chro
 
 chromosome10_teosinte_genotypes_snp_arrange_ascending <- arrange(chromosome10_teosinte_genotypes_snp, Position)
 
-write.csv(chromosome10_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr10_teosinte_ascending_question.csv", row.names=F)
+write.csv(chromosome10_teosinte_genotypes_snp_arrange_ascending, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_ascend_question/chr10_teosinte_ascending_question.csv", row.names=F)
 ```
 
 
@@ -347,7 +352,7 @@ chromosome1_maize_genotypes_snp_arrange_descending <- arrange(chromosome1_maize_
 
 chromosome1_maize_decending_dash <- as.data.frame(lapply(chromosome1_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome1_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr1_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome1_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr1_maize_decending_dash.csv", row.names=F)
 ```
 
 **maize** chromosome 2:
@@ -356,7 +361,7 @@ chromosome2_maize_genotypes_snp_arrange_descending <- arrange(chromosome2_maize_
 
 chromosome2_maize_decending_dash <- as.data.frame(lapply(chromosome2_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome2_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr2_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome2_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr2_maize_decending_dash.csv", row.names=F)
 ```
 
 **maize** chromosome 3:
@@ -365,7 +370,7 @@ chromosome3_maize_genotypes_snp_arrange_descending <- arrange(chromosome3_maize_
 
 chromosome3_maize_decending_dash <- as.data.frame(lapply(chromosome3_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome3_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr3_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome3_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr3_maize_decending_dash.csv", row.names=F)
 ```
 
 
@@ -376,7 +381,7 @@ chromosome4_maize_genotypes_snp_arrange_descending <- arrange(chromosome4_maize_
 
 chromosome4_maize_decending_dash <- as.data.frame(lapply(chromosome4_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome4_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr4_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome4_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr4_maize_decending_dash.csv", row.names=F)
 ```
 
 
@@ -386,7 +391,7 @@ chromosome5_maize_genotypes_snp_arrange_descending <- arrange(chromosome5_maize_
 
 chromosome5_maize_decending_dash <- as.data.frame(lapply(chromosome5_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome5_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr5_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome5_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr5_maize_decending_dash.csv", row.names=F)
 ```
 
 
@@ -396,7 +401,7 @@ chromosome6_maize_genotypes_snp_arrange_descending <- arrange(chromosome6_maize_
 
 chromosome6_maize_decending_dash <- as.data.frame(lapply(chromosome6_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome6_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr6_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome6_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr6_maize_decending_dash.csv", row.names=F)
 ```
 
 **maize** chromosome 7:
@@ -405,7 +410,7 @@ chromosome7_maize_genotypes_snp_arrange_descending <- arrange(chromosome7_maize_
 
 chromosome7_maize_decending_dash <- as.data.frame(lapply(chromosome7_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome7_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr7_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome7_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr7_maize_decending_dash.csv", row.names=F)
 ```
 
 **maize** chromosome 8: 
@@ -414,7 +419,7 @@ chromosome8_maize_genotypes_snp_arrange_descending <- arrange(chromosome8_maize_
 
 chromosome8_maize_decending_dash <- as.data.frame(lapply(chromosome8_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome8_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr8_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome8_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr8_maize_decending_dash.csv", row.names=F)
 ```
 
 **maize** chromosome 9:
@@ -423,7 +428,7 @@ chromosome9_maize_genotypes_snp_arrange_descending <- arrange(chromosome9_maize_
 
 chromosome9_maize_decending_dash <- as.data.frame(lapply(chromosome9_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome9_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr9_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome9_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr9_maize_decending_dash.csv", row.names=F)
 ```
 
 
@@ -433,7 +438,7 @@ chromosome10_maize_genotypes_snp_arrange_descending <- arrange(chromosome10_maiz
 
 chromosome10_maize_decending_dash <- as.data.frame(lapply(chromosome10_maize_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome10_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr10_maize_decending_dash.csv", row.names=F)
+write.csv(chromosome10_maize_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/maize_chr_decend_dash/chr10_maize_decending_dash.csv", row.names=F)
 ```
 
 For all the **teosinte** files that are chromosome specific (chromosome 1-10), with **decending** chromosome position values, and missing data encoded by a **-** :
@@ -444,7 +449,7 @@ chromosome1_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome1_teo
 
 chromosome1_teosinte_decending_dash <- as.data.frame(lapply(chromosome1_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome1_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr1_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome1_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr1_teosinte_decending_dash.csv", row.names=F)
 ```
 
 **teostine** chromosome 2:
@@ -453,7 +458,7 @@ chromosome2_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome2_teo
 
 chromosome2_teosinte_decending_dash <- as.data.frame(lapply(chromosome2_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome2_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr2_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome2_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr2_teosinte_decending_dash.csv", row.names=F)
 ```
 
 **teosinte** chromosome 3:
@@ -462,7 +467,7 @@ chromosome3_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome3_teo
 
 chromosome3_teosinte_decending_dash <- as.data.frame(lapply(chromosome3_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome3_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr3_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome3_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr3_teosinte_decending_dash.csv", row.names=F)
 ```
 
 **teosinte** chromosome 4:
@@ -471,7 +476,7 @@ chromosome4_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome4_teo
 
 chromosome4_teosinte_decending_dash <- as.data.frame(lapply(chromosome4_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome4_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr4_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome4_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr4_teosinte_decending_dash.csv", row.names=F)
 ```
 
 **teosinte** chromosome 5:
@@ -480,7 +485,7 @@ chromosome5_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome5_teo
 
 chromosome5_teosinte_decending_dash <- as.data.frame(lapply(chromosome5_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome5_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr5_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome5_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr5_teosinte_decending_dash.csv", row.names=F)
 ```
 
 **teosinte** chromosome 6:
@@ -489,7 +494,7 @@ chromosome6_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome6_teo
 
 chromosome6_teosinte_decending_dash <- as.data.frame(lapply(chromosome6_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome6_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr6_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome6_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr6_teosinte_decending_dash.csv", row.names=F)
 ```
 
 **teosinte** chromosome 7:
@@ -498,7 +503,7 @@ chromosome7_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome7_teo
 
 chromosome7_teosinte_decending_dash <- as.data.frame(lapply(chromosome7_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome7_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr7_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome7_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr7_teosinte_decending_dash.csv", row.names=F)
 ```
 
 **teosinte** chromosome 8:
@@ -507,7 +512,7 @@ chromosome8_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome8_teo
 
 chromosome8_teosinte_decending_dash <- as.data.frame(lapply(chromosome8_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome8_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr8_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome8_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr8_teosinte_decending_dash.csv", row.names=F)
 ```
 
 **teosinte** chromosome 9:
@@ -516,7 +521,7 @@ chromosome9_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome9_teo
 
 chromosome9_teosinte_decending_dash <- as.data.frame(lapply(chromosome9_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome9_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr9_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome9_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr9_teosinte_decending_dash.csv", row.names=F)
 ```
 
 
@@ -526,7 +531,7 @@ chromosome10_teosinte_genotypes_snp_arrange_descending <- arrange(chromosome10_t
 
 chromosome10_teosinte_decending_dash <- as.data.frame(lapply(chromosome10_teosinte_genotypes_snp_arrange_descending, FUN = function(x)as.character(gsub("\\?", "-", x))))
 
-write.csv(chromosome10_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/final_files/chr10_teosinte_decending_dash.csv", row.names=F)
+write.csv(chromosome10_teosinte_decending_dash, "~/Desktop/BCB546_Assignments/R_Assignment/Final_files/teosinte_chr_decend_dash/chr10_teosinte_decending_dash.csv", row.names=F)
 ```
 
 # Part II
